--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5"
   }
 }
