--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bundle": "webpack",
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "react-scripts start",
     "check-types": "tsc"
   },
   "repository": {
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/LedzZm/ZeroAssignment/issues"
   },
-  "homepage": "https://github.com/LedzZm/ZeroAssignment#readme",
+  "homepage": "",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -33,7 +33,7 @@
     "tslint": "^6.1.3",
     "tslint-immutable": "^6.0.1",
     "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
+    "webpack": "4.42.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
@@ -42,6 +42,19 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "^3.4.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
