--- a/package.json
+++ b/package.json
@@ -28,15 +28,11 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/googlemaps": "^3.39.13",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^1.2.1",
     "tslint": "^6.1.3",
     "tslint-immutable": "^6.0.1",
     "typescript": "^4.0.3",
     "webpack": "4.42.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@types/react": "^16.9.49",
